Fix mobile app theme overflow
Add bottom padding to compensate for nav overlay

--- a/RockWeb/Themes/church_ccv_External_v7/Styles/mobileapp-theme.less
+++ b/RockWeb/Themes/church_ccv_External_v7/Styles/mobileapp-theme.less
@@ -63,7 +63,8 @@ html {
 body {
   background-color: @body-bg;
   color: @text-color;
-  .text-aa()
+  .text-aa();
+  padding-bottom: @grid-gutter-width*3;
 }
 
 h1, h2, h3, h4, h5, h6,
